--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <title>Hello World</title>
     </head>
-    
+
     <body>
-        Hello World
+     <p>Hello World</p>
+     <p>My First Website</p>
+     <p>by Alli</p>
     </body>
 </html>
