--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+<html lang="en"
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hello World</title>
     </head>
 
     <body>
      <p>Hello World</p>
-     <p>My First Website</p>
-     <p>by Alli</p>
     </body>
 </html>
